fix(css): align and add padding to hero text
Thanks @anfibiacreativa!

--- a/src/components/starter/hero/hero.module.css
+++ b/src/components/starter/hero/hero.module.css
@@ -13,6 +13,8 @@
   color: white;
   margin: 0;
   font-size: 1rem;
+  text-align: justify;
+  padding: 0 20px;
 }
 
 .button-group {
